Adding support api tests, user post endpoint and basic react app with routing

--- a/smsgw/config/environment.py.sample
+++ b/smsgw/config/environment.py.sample
@@ -4,8 +4,8 @@
 from smsgw.config.default import Default
 
 
-class Development(Default):
-    """ Development config """
+class <#Environament>(Default):
+    """ <#Environament> config """
 
     DEBUG = True
     LOGGING = False
