--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "dependencies": {
         "flux": "^2.0.0",
         "react": "~0.11.0",
-        "react-router": "*"
+        "react-router": "*",
+        "superagent": "*"
     },
     "devDependencies": {
         "browserify": "~4.2.2",
         "reactify": "~0.14.0",
         "uglify-js": "~2.4.15",
         "watchify": "~0.10.2",
-        "coffeeify": "*",
         "coffee-reactify": "*",
         "coffee-script": "~1.7.1",
         "envify": "~2.0.1",
