--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-Classy==0.6.10
 Flask-Script==2.0.3
 Flask-SQLAlchemy==1.0
 Flask-Testing==0.4.2
+Flask-UUID==0.2
 Jinja2==2.7.3
 MySQL-python==1.2.5
 SQLAlchemy==0.9.7
