--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "react-router": "~0.11.6",
         "react-ladda": "~2.0.0",
         "superagent": "~0.21.0",
-        "localStorage": "~0.3.6",
+        "localStorage": "~1.0.3",
         "bluebird": "~2.6.2",
         "object-assign": "~2.0.0"
     },
@@ -31,7 +31,7 @@
         "gulp": "~3.8.0",
         "gulp-coffeelint": "^0.3.2",
         "gulp-util": "~3.0.2",
-        "gulp-watch": "~3.0.0.",
+        "gulp-watch": "~3.0.0",
         "vinyl-source-stream": "~1.0.0"
     }
 }
