--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+alembic==0.7.3
 Flask==0.10.1
 Flask-Bcrypt==0.6.0
 Flask-Classy==0.6.10
+Flask-Migrate==1.3.0
 Flask-Script==2.0.3
 Flask-SQLAlchemy==1.0
 Flask-Testing==0.4.2
