--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-router": "~0.11.6",
         "react-ladda": "~2.0.0",
         "superagent": "~0.21.0",
+        "keymirror": "~0.1.0",
         "localStorage": "~1.0.3",
         "bluebird": "~2.6.2",
         "object-assign": "~2.0.0"
