--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "superagent": "~0.21.0",
         "localStorage": "~1.0.3",
         "bluebird": "~2.6.2",
-        "object-assign": "~2.0.0"
+        "object-assign": "~2.0.0",
+        "lodash": "~3.0.0"
     },
     "devDependencies": {
         "coffee-script": "~1.8.0",
