--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react": "~0.12.2",
         "react-router": "~0.11.6",
         "react-ladda": "~2.0.0",
+        "react-d3": "~0.1.6",
         "superagent": "~0.21.0",
         "localStorage": "~1.0.3",
         "bluebird": "~2.6.2",
