--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-router": "~0.11.6",
         "react-ladda": "~2.0.0",
         "react-d3": "~0.1.6",
+        "react-bootstrap": "~0.13.3",
         "superagent": "~0.21.0",
         "localStorage": "~1.0.3",
         "bluebird": "~2.6.2",
