Celery: integration celery and flower to project
- created simple two tasks
- created gammu script for receiving messages

--- a/provisioning/files/nginx/local.conf
+++ b/provisioning/files/nginx/local.conf
@@ -11,3 +11,18 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+
+server {
+    listen 80;
+    server_name flower.local;
+    charset utf-8;
+
+    location / {
+        proxy_pass http://localhost:5555;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+}
