--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alembic==0.7.3
 awesome-slugify==1.6
+celery==3.1.17
+flower==0.7.3
 Flask==0.10.1
 Flask-Bcrypt==0.6.0
 Flask-Classy==0.6.10
@@ -16,4 +18,5 @@ jsonschema==2.3.0
 nose==1.3.3
 nose-timer==0.3.0
 requests==2.3.0
+pytz==2014.4
 Werkzeug==0.9.6
