--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "localStorage": "~1.0.3",
         "bluebird": "~2.6.2",
         "object-assign": "~2.0.0",
-        "lodash": "~3.0.0"
+        "lodash": "~3.0.0",
+        "moment": "~2.9.0"
     },
     "devDependencies": {
         "coffee-script": "~1.8.0",
