Provisioning: added nodejs and rabbitmq installation

--- a/provisioning/machine.yml
+++ b/provisioning/machine.yml
@@ -19,7 +19,7 @@
     - name: install nginx
       apt: name=nginx
 
-    - name: install python
+    - name: install python and rabbitmq server
       apt: name={{ item }}
       with_items:
         - python
@@ -27,15 +27,25 @@
         - python-setuptools
         - python-virtualenv
         - python-software-properties
+        - rabbitmq-server
 
+    # supervisor
     - name: install supervisor
       apt: name=supervisor
+
+    # nodejs
+    - shell: curl -sL https://deb.nodesource.com/setup | bash -
+    - apt: name=nodejs
+    - npm: name=webpack global=yes
+    - npm: name=jest-cli global=yes
+    - npm: name=babel global=yes
 
     # mariadb
     - apt_key: keyserver=keyserver.ubuntu.com id=0xcbcb082a1bb943db
     - apt_repository: repo='deb http://mirror.vpsfree.cz/mariadb/repo/5.5/debian wheezy main'
     - apt: update_cache=yes
     - apt: name=mariadb-server
+    - apt: name=libmariadbclient-dev
 
     # gammu
     - git: repo=https://github.com/gammu/gammu.git
