--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     ],
     "dependencies": {
         "flux": "^2.0.0",
-        "react": "~0.12.2",
-        "react-router": "~0.11.6",
-        "react-ladda": "~2.0.0",
+        "react": "~0.13.1",
+        "react-tools": "~0.13.1",
+        "react-router": "~0.13.2",
+        "react-ladda": "~2.0.2",
         "react-d3": "~0.1.6",
         "react-bootstrap": "~0.13.3",
         "superagent": "~0.21.0",
@@ -31,6 +32,7 @@
         "gulp-webpack": "~1.2.0",
         "json-loader": "~0.5.1",
         "cjsx-loader": "~1.2.0",
+        "babel-loader": "~4.0.0",
         "coffee-loader": "~0.7.2"
     }
 }
