--- a/provisioning/machine.yml
+++ b/provisioning/machine.yml
@@ -39,6 +39,7 @@
     - npm: name=webpack global=yes
     - npm: name=jest-cli global=yes
     - npm: name=babel global=yes
+    - npm: name=gulp global=yes
 
     # mariadb
     - apt_key: keyserver=keyserver.ubuntu.com id=0xcbcb082a1bb943db
