--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "gulp-coffeelint": "^0.4.0",
         "gulp-util": "~3.0.2",
         "gulp-webpack": "~1.2.0",
+        "execSync": "~1.0.2",
         "json-loader": "~0.5.1",
         "cjsx-loader": "~1.2.0",
         "babel-loader": "~4.0.0",
