--- a/package.json
+++ b/package.json
@@ -1,39 +1,37 @@
 {
-    "name": "sms-gateway",
-    "version": "0.0.1",
-    "description": "SMS gateway",
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:VojtechBartos/smsgw.git"
-    },
-    "contributors": [
-        "Vojta Bartos <vojta@sleepio.com>"
-    ],
-    "dependencies": {
-        "flux": "^2.0.0",
-        "react": "~0.13.1",
-        "react-tools": "~0.13.1",
-        "react-router": "~0.13.2",
-        "react-ladda": "~2.0.2",
-        "react-d3": "~0.3.0",
-        "react-bootstrap": "~0.19.1",
-        "superagent": "~1.1.0",
-        "localStorage": "~1.0.3",
-        "bluebird": "~2.9.6",
-        "object-assign": "~2.0.0",
-        "lodash": "~3.1.0",
-        "moment": "~2.9.0"
-    },
-    "devDependencies": {
-        "coffee-script": "~1.9.0",
-        "gulp": "~3.8.0",
-        "gulp-coffeelint": "^0.4.0",
-        "gulp-util": "~3.0.2",
-        "gulp-webpack": "~1.3.0",
-        "execSync": "~1.0.2",
-        "json-loader": "~0.5.1",
-        "cjsx-loader": "~2.0.1",
-        "babel-loader": "~4.2.0",
-        "coffee-loader": "~0.7.2"
-    }
+  "name": "smsgw",
+  "description": "SMS gateway",
+  "author": "Vojta Bartos <me@vojtechbartos.cz>",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:VojtechBartos/smsgw.git"
+  },
+  "dependencies": {
+    "flux": "^2.0.0",
+    "react": "~0.13.1",
+    "react-tools": "~0.13.1",
+    "react-router": "~0.13.2",
+    "react-ladda": "~2.0.2",
+    "react-d3": "~0.3.0",
+    "react-bootstrap": "~0.20.3",
+    "superagent": "~1.1.0",
+    "localStorage": "~1.0.3",
+    "bluebird": "~2.9.6",
+    "object-assign": "~2.0.0",
+    "lodash": "~3.6.0",
+    "moment": "~2.10.2"
+  },
+  "devDependencies": {
+    "coffee-script": "~1.9.0",
+    "gulp": "~3.8.0",
+    "gulp-coffeelint": "^0.4.0",
+    "gulp-util": "~3.0.2",
+    "gulp-webpack": "~1.3.0",
+    "execSync": "~1.0.2",
+    "json-loader": "~0.5.1",
+    "cjsx-loader": "~2.0.1",
+    "babel-loader": "~5.0.0",
+    "coffee-loader": "~0.7.2"
+  }
 }
