--- a/package.json
+++ b/package.json
@@ -28,15 +28,11 @@
     "randomstring": "~1.0.5"
   },
   "devDependencies": {
-    "coffee-script": "~1.9.0",
     "gulp": "~3.8.0",
-    "gulp-coffeelint": "^0.5.0",
     "gulp-util": "~3.0.2",
     "gulp-webpack": "~1.4.0",
     "execSync": "~1.0.2",
     "json-loader": "~0.5.1",
-    "cjsx-loader": "~2.0.1",
-    "babel-loader": "~5.1.3",
-    "coffee-loader": "~0.7.2"
+    "babel-loader": "~5.1.3"
   }
 }
