--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "react-router": "~0.13.2",
     "react-ladda": "~2.0.2",
     "react-d3": "~0.3.0",
+    "react-tagsinput": "~1.4.0",
     "react-bootstrap": "~0.23.4",
+    "react-bootstrap-datetimepicker": "~0.0.16",
+    "revalidator": "~0.3.1",
     "superagent": "~1.2.0",
     "localStorage": "~1.0.3",
     "bluebird": "~2.9.6",
     "lodash": "~3.10.0",
-    "moment": "~2.10.2",
+    "moment": "~2.10.3",
     "eventemitter3": "~1.1.0",
     "immutable": "~3.7.3",
     "randomstring": "~1.0.5"
