Provisioning: added restart nginx handler

--- a/provisioning/machine.yml
+++ b/provisioning/machine.yml
@@ -12,3 +12,9 @@
     - include: tasks/mariadb.yml
     - include: tasks/python.yml
     - include: tasks/gammu.yml
+
+  handlers:
+    - name: restart nginx
+      service:
+        name: nginx
+        state: restarted
