--- a/package.json
+++ b/package.json
@@ -2,23 +2,12 @@
   "name": "smsgw",
   "description": "SMS gateway",
   "author": "Vojta Bartos <me@vojtechbartos.cz>",
-  "version": "0.0.1",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git@github.com:VojtechBartos/smsgw.git"
   },
   "dependencies": {
-    "gulp": "~3.9.0",
-    "gulp-util": "~3.0.2",
-    "gulp-webpack": "~1.5.0",
-    "babel": "^5.0.8",
-    "babel-core": "^5.0.8",
-    "babel-eslint": "^4.0.5",
-    "babel-loader": "^5.0.0",
-    "json-loader": "~0.5.1",
-    "execSync": "~1.0.2",
-    "eslint-loader": "^0.14.0",
-    "eslint-plugin-react": "^3.1.0",
     "flux": "^2.0.0",
     "react": "~0.13.1",
     "react-pure-render": "^1.0.1",
@@ -30,7 +19,7 @@
     "react-bootstrap": "~0.24.3",
     "react-bootstrap-datetimepicker": "~0.0.16",
     "revalidator": "~0.3.1",
-    "superagent": "~1.2.0",
+    "superagent": "~1.5.0",
     "localStorage": "~1.0.3",
     "bluebird": "~2.9.6",
     "lodash": "~3.10.0",
@@ -38,5 +27,22 @@
     "eventemitter3": "~1.1.0",
     "immutable": "~3.7.3",
     "randomstring": "~1.0.5"
+  },
+  "devDependencies": {
+    "gulp": "~3.9.0",
+    "gulp-util": "~3.0.2",
+    "webpack": "~1.12.6",
+    "webpack-stream": "~2.1.1",
+    "babel": "^6.1.18",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-1": "^6.1.18",
+    "babel-eslint": "^4.1.6",
+    "json-loader": "~0.5.1",
+    "eslint": "^1.6.0",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.1.0"
   }
 }
