--- a/provisioning/tasks/node.yml
+++ b/provisioning/tasks/node.yml
@@ -1,7 +1,4 @@
 ---
-- shell: curl -sL https://deb.nodesource.com/setup | bash -
+- shell: curl -sL https://deb.nodesource.com/setup_5.x | bash -
 - apt: name=nodejs
-- npm: name=webpack global=yes
-- npm: name=jest-cli global=yes
-- npm: name=babel global=yes
 - npm: name=gulp global=yes
