EditorConfig: adding additional settings

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,10 +9,10 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
-[*.{js,json}]
+[*.{js,json,yml}]
 indent_style = space
 indent_size = 2
 
-[{package.json,.travis.yml}]
+[{package.json, Dockerfile}]
 indent_style = space
 indent_size = 2
