--- a/package.json
+++ b/package.json
@@ -29,20 +29,21 @@
     "randomstring": "~1.0.5"
   },
   "devDependencies": {
-    "gulp": "~3.9.0",
-    "gulp-util": "~3.0.2",
-    "webpack": "~1.12.6",
-    "webpack-stream": "~2.1.1",
     "babel": "^6.1.18",
     "babel-core": "^6.2.1",
+    "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-1": "^6.1.18",
-    "babel-eslint": "^4.1.6",
-    "json-loader": "~0.5.1",
     "eslint": "^1.6.0",
     "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.1.0"
+    "eslint-plugin-react": "^3.1.0",
+    "gulp": "~3.9.0",
+    "gulp-util": "~3.0.2",
+    "json-loader": "~0.5.1",
+    "webpack": "~1.12.6",
+    "webpack-stream": "~2.1.1",
+    "yargs": "^3.31.0"
   }
 }
