Travis: fixing env variables to be global ones and not triggering 6 different bids

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,13 @@ python:
   - 2.7
 
 env:
-  - TESTING=1
-  - DEBUG=1
-  - DATABASE_HOST="localhost"
-  - DATABASE_NAME="smsgw_test"
-  - DATABASE_USERNAME="smsgw_test"
-  - DATABASE_PASSWORD=""
+  global:
+    - TESTING=1
+    - DEBUG=1
+    - DATABASE_HOST="localhost"
+    - DATABASE_NAME="smsgw_test"
+    - DATABASE_USERNAME="smsgw_test"
+    - DATABASE_PASSWORD=""
 
 install: "pip install -r requirements.txt"
 
