--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
     - DEBUG=1
     - DATABASE_HOST="localhost"
     - DATABASE_NAME="smsgw_test"
-    - DATABASE_USERNAME="smsgw_test"
+    - DATABASE_USERNAME="travis"
 
 install: "pip install -r requirements.txt"
 
