--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
     - DATABASE_HOST="localhost"
     - DATABASE_NAME="smsgw_test"
     - DATABASE_USERNAME="travis"
+    - DATABASE_PASSWORD=""
 
 install: "pip install -r requirements.txt"
 
