Upgrading to latest react version
- replacing deprecated functions

--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
   },
   "dependencies": {
     "flux": "^2.0.0",
-    "react": "~0.13.1",
+    "react": "~0.14.3",
+    "react-dom": "~0.14.0",
     "react-pure-render": "^1.0.1",
-    "react-tools": "~0.13.1",
+    "react-tools": "~0.13.3",
     "react-router": "~0.13.2",
-    "react-ladda": "~2.0.2",
-    "react-d3": "~0.3.0",
     "react-tagsinput": "~1.4.0",
-    "react-bootstrap": "~0.24.3",
-    "react-bootstrap-datetimepicker": "~0.0.16",
+    "react-ladda": "~4.0.0",
+    "react-d3": "~0.4.0",
+    "react-bootstrap": "~0.28.1",
+    "react-bootstrap-datetimepicker": "~0.0.22",
     "revalidator": "~0.3.1",
     "superagent": "~1.5.0",
     "localStorage": "~1.0.3",
     "bluebird": "~2.9.6",
-    "lodash": "~3.10.0",
+    "lodash": "~3.10.1",
     "moment": "~2.10.3",
     "eventemitter3": "~1.1.0",
     "immutable": "~3.7.3",
