--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Jinja2==2.7.3
 MySQL-python==1.2.5
 SQLAlchemy==0.9.7
 jsonschema==2.3.0
+mock==1.3.0
 nose==1.3.3
 nose-timer==0.3.0
 requests==2.3.0
