--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,7 @@
 machine:
   node:
     version: 5.3.0
+
   python:
     version: 2.7
 
@@ -11,3 +12,7 @@ machine:
     DATABASE_NAME: circle_test
     DATABASE_USERNAME: ubuntu
     DATABASE_PASSWORD: ""
+
+dependencies:
+  pre:
+    - pip install setuptools==19.2
