Provisioning: updated provisioning to do one command new machine set up
- also automatically start app

--- a/.env.sample
+++ b/.env.sample
@@ -1,16 +1,16 @@
-DEBUG=1
+DEBUG={{ debug }}
 
 TERM=xterm
 
-NGINX_HOSTNAME=smsgw.cz
+NGINX_HOSTNAME={{ hostname }}
 
-MARIADB_DATABASE=smsgw
-MARIADB_USER=smsgw
-MARIADB_USER_PASSWORD=smsgw
+MARIADB_DATABASE={{ database_name }}
+MARIADB_USER={{ database_user }}
+MARIADB_USER_PASSWORD={{ database_password }}
 
-RABBITMQ_DEFAULT_VHOST=smsgw
-RABBITMQ_DEFAULT_USER=smsgw
-RABBITMQ_DEFAULT_PASS=smsgw
+RABBITMQ_DEFAULT_VHOST={{ rabbitmq_vhost }}
+RABBITMQ_DEFAULT_USER={{ rabbitmq_user }}
+RABBITMQ_DEFAULT_PASS={{ rabbitmq_password }}
 
 MAIL_SERVER=smtp.example.com
 MAIL_PORT=465
@@ -20,6 +20,6 @@ MAIL_PASSWORD=password
 MAIL_DEFAULT_SENDER=smsgw@example.com
 
 DATABASE_HOST=db
-DATABASE_NAME=smsgw
-DATABASE_USERNAME=smsgw
-DATABASE_PASSWORD=smsgw
+DATABASE_NAME={{ database_name }}
+DATABASE_USERNAME={{ database_user }}
+DATABASE_PASSWORD={{ database_password }}
