Using official docker mariadb container

--- a/.env.sample
+++ b/.env.sample
@@ -4,9 +4,10 @@ TERM=xterm
 
 NGINX_HOSTNAME={{ hostname }}
 
-MARIADB_DATABASE={{ database_name }}
-MARIADB_USER={{ database_user }}
-MARIADB_USER_PASSWORD={{ database_password }}
+MYSQL_ROOT_PASSWORD={{ database_root_password }}
+MYSQL_DATABASE={{ database_name }}
+MYSQL_USER={{ database_user }}
+MYSQL_PASSWORD={{ database_password }}
 
 RABBITMQ_DEFAULT_VHOST={{ rabbitmq_vhost }}
 RABBITMQ_DEFAULT_USER={{ rabbitmq_user }}
