--- a/provisioning/roles/docker/tasks/main.yml
+++ b/provisioning/roles/docker/tasks/main.yml
@@ -1,22 +1,8 @@
-- name: add the new gpg key
-  apt_key: keyserver=hkp://p80.pool.sks-keyservers.net:80 id=58118E89F3A912897C070ADBF76221572C52609D
-
-- name: creating docker apt source list file
-  command: touch /etc/apt/sources.list.d/docker.list
-
-- name: truncate docker apt source list file
-  command: truncate -s 0 /etc/apt/sources.list.d/docker.list
-
-- name: adding source to docker apt source list
-  lineinfile:
-    dest: /etc/apt/sources.list.d/docker.list
-    line: 'deb https://apt.dockerproject.org/repo ubuntu-trusty main'
-
-- name: installing docker
-  apt: name=docker.io update_cache=yes
+- name: installing
+  shell: wget -qO- https://get.docker.io/ | sed -e "s/docker.com/docker.io/g" | sh
 
 - name: installing docker compose
-  shell: curl -L https://github.com/docker/compose/releases/download/1.3.0/docker-compose-$(uname -s)-$(uname -m) > /usr/local/bin/docker-compose
+  shell: curl -L https://github.com/docker/compose/releases/download/1.5.2/docker-compose-$(uname -s)-$(uname -m) > /usr/local/bin/docker-compose
 
 - name: apply executable permissions to docker compose
   command: chmod +x /usr/local/bin/docker-compose
