--- a/.env.sample
+++ b/.env.sample
@@ -13,12 +13,12 @@ RABBITMQ_DEFAULT_VHOST={{ rabbitmq_vhost }}
 RABBITMQ_DEFAULT_USER={{ rabbitmq_user }}
 RABBITMQ_DEFAULT_PASS={{ rabbitmq_password }}
 
-MAIL_SERVER=smtp.example.com
-MAIL_PORT=465
-MAIL_USE_SSL=1
-MAIL_USERNAME=smsgw@example.com
-MAIL_PASSWORD=password
-MAIL_DEFAULT_SENDER=smsgw@example.com
+MAIL_SERVER={{ mail_server }}
+MAIL_PORT={{ mail_port }}
+MAIL_USE_SSL={{ mail_use_ssl }}
+MAIL_USERNAME={{ mail_username }}
+MAIL_PASSWORD={{ mail_password }}
+MAIL_DEFAULT_SENDER={{ mail_default_sender }}
 
 DATABASE_HOST=db
 DATABASE_NAME={{ database_name }}
