Provisioning: pulling images for project in separate task

--- a/provisioning/roles/smsgw/tasks/main.yml
+++ b/provisioning/roles/smsgw/tasks/main.yml
@@ -9,5 +9,10 @@
   template:
     src: ../../../../.env.sample
     dest: /usr/src/smsgw/.env
+
+- name: pulling images
+  command: docker-compose pull
+  args:
+    chdir: /usr/src/smsgw/
   notify:
     - docker compose up
