--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ machine:
 dependencies:
   pre:
     - pip install setuptools==19.2
-    - npm install npm@3.8.5
+    - npm install -g npm@3.8.5
     - npm install -g gulp
 
 test:
