--- a/.env.sample
+++ b/.env.sample
@@ -20,7 +20,7 @@ MAIL_USERNAME={{ mail_username }}
 MAIL_PASSWORD={{ mail_password }}
 MAIL_DEFAULT_SENDER={{ mail_default_sender }}
 
-DATABASE_HOST=db
+DATABASE_HOST=mariadb
 DATABASE_NAME={{ database_name }}
 DATABASE_USERNAME={{ database_user }}
 DATABASE_PASSWORD={{ database_password }}
