--- a/package.json
+++ b/package.json
@@ -8,43 +8,43 @@
     "url": "git@github.com:VojtechBartos/smsgw.git"
   },
   "dependencies": {
-    "flux": "^2.0.0",
-    "react": "~0.14.3",
-    "react-dom": "~0.14.0",
-    "react-pure-render": "^1.0.1",
-    "react-tools": "~0.13.3",
-    "react-router": "~0.13.2",
-    "react-tagsinput": "~1.4.0",
-    "react-ladda": "~4.0.0",
-    "react-d3": "~0.4.0",
-    "react-bootstrap": "~0.28.1",
-    "react-bootstrap-datetimepicker": "~0.0.22",
-    "revalidator": "~0.3.1",
-    "superagent": "~1.6.1",
-    "localStorage": "~1.0.3",
-    "bluebird": "~3.1.1",
-    "lodash": "~3.10.1",
-    "moment": "~2.10.3",
-    "eventemitter3": "~1.1.0",
-    "immutable": "~3.7.3",
-    "randomstring": "~1.1.3"
+    "flux": "2.0.0",
+    "react": "0.13.1",
+    "react-pure-render": "1.0.1",
+    "react-tools": "0.13.1",
+    "react-router": "0.13.2",
+    "react-tagsinput": "1.4.0",
+    "react-ladda": "2.0.2",
+    "react-d3": "0.4.0",
+    "react-bootstrap": "0.24.3",
+    "react-bootstrap-datetimepicker": "0.0.16",
+    "revalidator": "0.3.1",
+    "superagent": "1.6.1",
+    "localStorage": "1.0.3",
+    "bluebird": "3.1.1",
+    "lodash": "3.10.1",
+    "moment": "2.10.3",
+    "eventemitter3": "1.1.0",
+    "immutable": "3.7.3",
+    "randomstring": "1.1.3"
   },
   "devDependencies": {
-    "babel": "^6.1.18",
-    "babel-core": "^6.2.1",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-1": "^6.1.18",
-    "eslint": "^1.6.0",
-    "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.1.0",
-    "gulp": "~3.9.0",
-    "gulp-util": "~3.0.2",
-    "json-loader": "~0.5.1",
-    "webpack": "~1.12.6",
-    "webpack-stream": "~3.1.0",
-    "yargs": "^3.31.0"
+    "babel": "6.1.18",
+    "babel-core": "6.2.1",
+    "babel-eslint": "4.1.6",
+    "babel-loader": "6.2.0",
+    "babel-preset-es2015": "6.1.18",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-stage-1": "6.1.18",
+    "escope": "^3.3.0",
+    "eslint": "1.6.0",
+    "eslint-loader": "1.1.1",
+    "eslint-plugin-react": "3.1.0",
+    "gulp": "3.9.0",
+    "gulp-util": "3.0.2",
+    "json-loader": "0.5.1",
+    "webpack": "1.12.6",
+    "webpack-stream": "3.1.0",
+    "yargs": "3.31.0"
   }
 }
