--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-preset-es2015": "6.1.18",
     "babel-preset-react": "6.3.13",
     "babel-preset-stage-1": "6.1.18",
-    "escope": "^3.3.0",
+    "escope": "3.3.0",
     "eslint": "1.6.0",
     "eslint-loader": "1.1.1",
     "eslint-plugin-react": "3.1.0",
