Provisioning: enabling SSH password authentication

--- a/provisioning/roles/utilities/ssh/tasks/main.yml
+++ b/provisioning/roles/utilities/ssh/tasks/main.yml
@@ -20,8 +20,9 @@
         line: HostbasedAuthentication no
       - regex: "^#?ChallengeResponseAuthentication(.*)$"
         line: ChallengeResponseAuthentication no
+      # temporaly enabling passwd authentication
       - regex: "^#?PasswordAuthentication(.*)$"
-        line: PasswordAuthentication no
+        line: PasswordAuthentication yes
     notify: Restart sshd
 
     become: yes
