Docker: moving devices for gammu from dev to production compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ gammu:
   image: vojtechbartos/smsgw
   command: ./bin/smsd
   privileged: true
+  devices:
+    - "/dev/ttyUSB0:/dev/ttyUSB0"
   links:
     - mariadb
     - rabbitmq
