Switched to mailgun for email service
- added sending debug and error emails

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 DEBUG={{ debug }}
+LOGGING={{ logging }}
 
 TERM=xterm
 
@@ -13,12 +14,8 @@ RABBITMQ_DEFAULT_VHOST={{ rabbitmq_vhost }}
 RABBITMQ_DEFAULT_USER={{ rabbitmq_user }}
 RABBITMQ_DEFAULT_PASS={{ rabbitmq_password }}
 
-MAIL_SERVER={{ mail_server }}
-MAIL_PORT={{ mail_port }}
-MAIL_USE_SSL={{ mail_use_ssl }}
-MAIL_USERNAME={{ mail_username }}
-MAIL_PASSWORD={{ mail_password }}
-MAIL_DEFAULT_SENDER={{ mail_default_sender }}
+MAILGUN_DOMAIN={{ mailgun_domain }}
+MAILGUN_API_KEY={{ mailgun_api_key }}
 
 DATABASE_HOST=mariadb
 DATABASE_NAME={{ database_name }}
